<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorIce"
        tools:context=".view.MainActivity">


    <TextView
            android:id="@+id/txt_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_desafio_roga_labs"
            android:layout_marginTop="40dp"
            android:textSize="34sp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


    <ImageView
            android:id="@+id/img_roga"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/txt_titulo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:src="@drawable/logorogalabs"
            android:contentDescription="@string/label_logo_roga_labs"/>

    <TextView
            android:id="@+id/txt_meunome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textSize="20sp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/img_roga"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/label_meunome"/>

    <TextView
            android:id="@+id/txt_especialidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#2E2D2D"
            app:layout_constraintTop_toBottomOf="@id/txt_meunome"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/label_especialidade"/>

    <TextView
            android:id="@+id/txt_desafio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            app:layout_constraintTop_toBottomOf="@id/txt_especialidade"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/label_desafio"/>

    <TextView
            android:id="@+id/txt_descricao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#2E2D2D"
            app:layout_constraintTop_toBottomOf="@id/txt_desafio"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/label_desafiodescricao"/>


    <TextView
            android:id="@+id/txt_pressionartela"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            app:layout_constraintTop_toBottomOf="@id/txt_descricao"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="Pressione a tela para prosseguir"/>

    <ImageView
            android:id="@+id/img_finger"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/txt_pressionartela"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:src="@mipmap/ic_finger_round"
            android:contentDescription="@string/label_logo_roga_labs"/>

</androidx.constraintlayout.widget.ConstraintLayout>